[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/WordSelector.gd" type="Script" id=1]
[ext_resource path="res://Scripts/VBoxContainer.gd" type="Script" id=2]

[node name="WordSelector" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 504.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.138
anchor_top = 0.107
anchor_right = 0.75
anchor_bottom = 0.96
margin_left = 0.23999
margin_top = -0.200005
margin_right = -3.05176e-05
custom_constants/separation = 30
script = ExtResource( 2 )

[node name="AddButton" type="Button" parent="."]
anchor_left = 0.169
anchor_top = 0.027
anchor_right = 0.231
anchor_bottom = 0.08
margin_left = 0.119995
margin_top = -0.200001
margin_right = -0.120003
margin_bottom = -3.8147e-06
text = "+"

[node name="AddAllButton" type="Button" parent="."]
anchor_left = 0.4
anchor_top = 0.747
anchor_right = 0.662
anchor_bottom = 0.787
margin_top = -0.200012
margin_right = -0.240021
margin_bottom = -0.200043
text = "Ajouter!"

[node name="AcceptDialog" type="AcceptDialog" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -87.0
margin_top = -44.5
margin_right = 87.0
margin_bottom = 44.5
dialog_text = "Termes ajout√©s!"

[node name="WarningDialog" type="AcceptDialog" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -87.0
margin_top = -44.5
margin_right = 87.0
margin_bottom = 44.5
dialog_text = "Certains termes sont vides ou ne contiennent pas de traduction."
dialog_autowrap = true

[connection signal="pressed" from="AddButton" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="AddAllButton" to="." method="_on_AddAllButton_pressed"]
